--- a/ui/src/mainwindow.ui
+++ b/ui/src/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Zec Sapling Paper Wallet</string>
+   <string>Hush Paper Wallet</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
